@@ -20,6 +20,8 @@ Fixes:
 New features:
 
   - Support relative URLs in the web view widget (WEBCONSOLE-71)
+  - Add GET parameters to specify a controller
+    and panel combination to load at startup (WEBCONSOLE-72)
 
 WebConsole 2.1.2
 ================
